--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "holiday",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "karma": "~0.12.16"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
