--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,25 @@
-.tmp
-app/dist
-dist
-node_modules
+.tmp/
+dist/
+node_modules/
+*.zip
+.DS_Store
 app/bower_components
 app/bower_components/**/*
 npm-debug.log
-.svn
+.svn/
+*.sublime-project
+*.sublime-workspace
+report/
+app/display.html
+screenshot_*.png
 cms_user.js
+cms_user*.js
+bower_components
+*.codekit
+*.eot
+*.ttf
+*.woff
+Gruntfile-ck.js
+sftp-config.json
+error*.png
+
